--- a/public/css/about.css
+++ b/public/css/about.css
@@ -50,7 +50,7 @@
     border-bottom: 3px solid white;
 }
 .about-iwoc{
-    color: #7B66FF;
+    color: #ACAEFE;
 }
 .aboutnumber {
     font-size: 2.5rem;
