--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -176,24 +176,25 @@
 
 @media only screen and (min-width: 720px) {
 	.nav-link {
-		background: linear-gradient(to right, #c5dbf0, rgb(135, 178, 206));
+		/* background: linear-gradient(to right, #c5dbf0, rgb(135, 178, 206));
 		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
+		-webkit-text-fill-color: transparent; */
 	}
 }
 
 .nav-item:hover .nav-link {
-	color: rgb(44, 140, 205) !important;
+	color: white !important;
 }
 
 .nav-item.active .nav-link {
-	color: #777 !important;
+	color: white !important;
 }
 
 .nav-link {
 	position: relative;
 	padding: 5px 0 !important;
 	display: inline-block;
+	
 }
 
 .nav-item:after {
@@ -203,7 +204,7 @@
 	width: 100%;
 	height: 2px;
 	content: '';
-	background-color: rgb(44, 140, 205);
+	background-color: rgba(255, 255, 255, 0.525);
 	opacity: 0;
 	transition: all 200ms linear;
 }
@@ -269,6 +270,118 @@
 		0 0 100px rgb(0, 140, 255);
 }
 
+.nav-login-btn,.nav-login-btn::after {
+	-webkit-text-fill-color: #ACAEFE;
+	padding: 10px 50px;
+	font-size: 20px;
+	border: none;
+	border-radius: 5px;
+	color: #ACAEFE;
+	background-color: transparent;
+	position: relative;
+	display: block;
+	border: 1px solid #ACAEFE;
+  }
+
+.nav-login-btn::after {
+	--move1: inset(50% 50% 50% 50%);
+	--move2: inset(31% 0 40% 0);
+	--move3: inset(39% 0 15% 0);
+	--move4: inset(45% 0 40% 0);
+	--move5: inset(45% 0 6% 0);
+	--move6: inset(14% 0 61% 0);
+	clip-path: var(--move1);
+	content: 'LOGIN';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: block;
+  }
+  
+  .nav-login-btn:hover::after {
+	animation: glitch_4011 1s;
+	text-shadow: 10 10px 10px black;
+	animation-timing-function: steps(2, end);
+	text-shadow: -3px -3px 0px #c1c2ff, 3px 3px 0px #A4BEE1;
+	background-color: transparent;
+	border: 3px solid #ACAEFE;
+  }
+  
+  .nav-login-btn:hover {
+
+	text-shadow: -1px -1px 0px #c1c2ff, 1px 1px 0px #A4BEE1;
+  }
+  .nav-login-btn:hover .nav-item:after{
+	height: 0px;
+  }
+
+  .nav-login-btn:hover {
+
+	background-color: transparent;
+	border: 1px solid #ACAEFE;
+	box-shadow: 0px 10px 10px -10px #ACAEFE;
+  }
+  
+  @keyframes glitch_4011 {
+	0% {
+	  clip-path: var(--move1);
+	  transform: translate(0px,-10px);
+	}
+  
+	10% {
+	  clip-path: var(--move2);
+	  transform: translate(-10px,10px);
+	}
+  
+	20% {
+	  clip-path: var(--move3);
+	  transform: translate(10px,0px);
+	}
+  
+	30% {
+	  clip-path: var(--move4);
+	  transform: translate(-10px,10px);
+	}
+  
+	40% {
+	  clip-path: var(--move5);
+	  transform: translate(10px,-10px);
+	}
+  
+	50% {
+	  clip-path: var(--move6);
+	  transform: translate(-10px,10px);
+	}
+  
+	60% {
+	  clip-path: var(--move1);
+	  transform: translate(10px,-10px);
+	}
+  
+	70% {
+	  clip-path: var(--move3);
+	  transform: translate(-10px,10px);
+	}
+  
+	80% {
+	  clip-path: var(--move2);
+	  transform: translate(10px,-10px);
+	}
+  
+	90% {
+	  clip-path: var(--move4);
+	  transform: translate(-10px,10px);
+	}
+  
+	100% {
+	  clip-path: var(--move1);
+	  transform: translate(0);
+	}
+  }
+  
+  
 .navbar li {
 	display: flex;
 	align-items: center;
