--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,9 +1,86 @@
+@property --rotate {
+  syntax: "<angle>";
+  initial-value: 132deg;
+  inherits: false;
+}
+.new-card {
+  background: #191c29;
+  width: var(--card-width);
+  height: var(--card-height);
+  padding: 3px;
+  position: relative;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  font-size: 1.5em;
+  color: rgb(88 199 250 / 0%);
+  cursor: pointer;
+  font-family: cursive;
+  color:white;
+}
+
+.new-card:hover {
+  color: #ACAEFE;
+  transition: color 1s;
+}
+/* .new-card:hover:before, .card:hover:after {
+  animation: none;
+  opacity: 0;
+}  */
+
+
+.new-card::before {
+  content: "";
+  width: 104%;
+  height: 102%;
+  border-radius: 20px;
+  background-image: linear-gradient(
+    var(--rotate)
+    , #ACAEFE, #7e80fd);
+    position: absolute;
+    z-index: -1;
+    top: -1%;
+    left: -2%;
+    animation: spin 2.5s linear infinite;
+}
+
+.new-card::after {
+  position: absolute;
+  content: "";
+  top: calc(var(--card-height) / 6);
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  transform: scale(0.8);
+  filter: blur(calc(var(--card-height) / 6));
+  background-image: linear-gradient(
+    var(--rotate)
+    , #ACAEFE, #7e80fd);
+    opacity: 1;
+  transition: opacity .5s;
+  animation: spin 2.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    --rotate: 0deg;
+  }
+  100% {
+    --rotate: 360deg;
+  }
+}
 .prize{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 10%;
+    margin-bottom: 3%;
+
   } 
   
   div#first  {order: 2;}
@@ -18,7 +95,6 @@
   
   .prizeheading{
     font-size: xx-large;
-    /* font-weight: bolder; */
      margin-top: 1%;
     color: aliceblue;
   }
@@ -30,19 +106,13 @@
   .prizedescription{
     font-size: xx-large;
     text-align: center;
-    /* padding: 10% 5% 0 5%; */
     padding: 3%;
     font-weight: 1000;
     color: antiquewhite;
-    /* margin-top: 40%; */
     margin-top: 5%;
   }
   
-  /* .image{
-    position: absolute;
-    top: -80px;
-    margin-bottom: 30%;
-  } */
+  
   
   .title{
     margin-bottom: 13%;
@@ -54,12 +124,20 @@
           flex-direction: row;
       }
       .title{
-        margin-bottom: 5%;
+        margin-bottom: 3%;
       }
       .card{
         margin-bottom: 2%;
       }
-    } 
+      
+    }
+    @media only screen and (max-width:720px){
+      .prize{
+        margin-top: 10rem;
+      }
+    }
+    
+    
   
     .card1 {
        margin-left: 2%;
@@ -117,13 +195,6 @@
     transition: 0.2s ease-in-out;
     z-index: 1;
   }
-  
-  /* .imgs {
-    top: -40%;
-    position: absolute;
-    transition: 0.2s ease-in-out;
-    z-index: 1;
-  } */
   
   .textBox {
     opacity: 0;
