--- a/public/css/about.css
+++ b/public/css/about.css
@@ -298,7 +298,7 @@
   
   .flip-card-front {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
-    background-image:url('https://images.unsplash.com/photo-1575936123452-b67c3203c357?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8fDA%3D') ;
+    background-image:url('../img/Season_2/13.png') ;
     border-radius: 50%;
     overflow: hidden;
     background-size: cover;
@@ -306,7 +306,7 @@
   
   .flip-card-back {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 2px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
-    background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAVDD_D0mDmK0UyXIh-yz-REXxz-Fyo9edsmIUR6BHUo-WYcwVRLa0OHxu9Pr_utVPhuI&usqp=CAU');
+    background-image:url('../img/Season_2/14.png');
     transform: rotateY(180deg);
     border-radius: 50%;
     overflow: hidden;
