--- a/public/css/about.css
+++ b/public/css/about.css
@@ -396,3 +396,64 @@
     transform: translate(-30px, 30px);
   }
   
+  /* .contibution-card-abt1 {
+    width: 150px;
+    height: 150px;
+    background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+    border-radius: 50%;
+    transition: all .3s;
+    border-radius: 50%;
+   }
+   
+   .contibution-card-abt1 .card2 {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    transition: all .2s;
+   }
+   
+   .contibution-card-abt1 .card2:hover {
+    transform: scale(0.98);
+   }
+   
+   .contibution-card-abt1 .card:hover {
+    box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+   }
+
+
+
+   .contibution-card-abt2 {
+    width: 150px;
+    height: 150px;
+    background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+    border-radius: 50%;
+    transition: all .3s;
+    border-radius: 50%;
+   }
+   
+   .contibution-card-abt2 .card2 {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #1a1a1a;
+    transition: all .2s;
+   }
+   
+   .contibution-card-abt2 .card2:hover {
+    transform: scale(0.98);
+   }
+   
+   .contibution-card-abt2 .card:hover {
+    box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+   } */
+   .card-abt{
+    bottom: -10%;
+    justify-content: space-evenly;
+   }
+   @media  (max-width:500px) {
+       .card-abt{
+        bottom: -5%;
+        justify-content: space-between;
+       }
+    
+   }
