--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -66,7 +66,7 @@
                         <p>Leaderboard</p>
                     </div>
 
-                    <div class="menu-item flex" onclick="window.open('/project','mywindow');">
+                    <div class="menu-item flex" onclick="window.open('/projects','mywindow');">
                         <div class="icon">
                             <ion-icon name="magnet-outline"></ion-icon>
                         </div>
@@ -202,7 +202,7 @@
                                 pour in 🌧️
                             </h2>
 
-                            <a href="/project" class="btn">Projects</a>
+                            <a href="/projects" class="btn">Projects</a>
                         </div>
 
                         <img src="../public/img/ar_boy.png" alt="" />
