--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -3,6 +3,9 @@
 	font-size: large;
 	color: #ffffff;
 }
+.navbar-nav{
+	align-items: center;
+}
 
 @media screen and (min-width: 750px) {
 	.side {
@@ -165,12 +168,15 @@
 }
 
 .nav-logo{
-	scale: 1.8;
+	box-sizing: border-box;
+	/* scale: 1.8; */
 	margin-left: 0px;
 }
-@media only screen and (max-width: 750px){
+@media only screen and (max-width: 767.9px){
     .nav-logo{
-		margin-left: 40px;
+		margin-left: 50%;
+		transform: translate(-50%,0);
+		scale: 1;
 	}
 }
 
@@ -229,7 +235,7 @@
 		display: none;
 	}
 
-	.nav-item::before {
+	/* .nav-item::before {
 		position: absolute;
 		display: block;
 		top: 15px;
@@ -240,7 +246,7 @@
 		border: none;
 		background-color: #000;
 		vertical-align: 0;
-	}
+	} */
 }
 
 .shadow__btn {
@@ -291,7 +297,7 @@
 	--move5: inset(45% 0 6% 0);
 	--move6: inset(14% 0 61% 0);
 	clip-path: var(--move1);
-	content: 'LOGIN';
+	content: 'Register Now';
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -410,3 +416,158 @@
 		margin: 5px;
 	}
 }
+
+.button-register {
+	position: relative;
+	padding: 12px 35px;
+	background: #ACAEFE;
+	font-size: 17px;
+	font-weight: 500;
+	color: #181818;
+	border: 3px solid #ACAEFE;
+	border-radius: 8px;
+	box-shadow: 0 0 0 #ACAEFE;
+	transition: all 0.3s ease-in-out;
+	cursor: pointer;
+	width: fit-content;
+  }
+  
+  .star-1 {
+	position: absolute;
+	top: 20%;
+	left: 20%;
+	width: 25px;
+	height: auto;
+	filter: drop-shadow(0 0 0 #fff);
+	z-index: -5;
+	transition: all 1s cubic-bezier(0.05, 0.83, 0.43, 0.96);
+  }
+  
+  .star-2 {
+	position: absolute;
+	top: 45%;
+	left: 45%;
+	width: 15px;
+	height: auto;
+	filter: drop-shadow(0 0 0 #fff);
+	z-index: -5;
+	transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
+  }
+  
+  .star-3 {
+	position: absolute;
+	top: 40%;
+	left: 40%;
+	width: 8px;
+	height: auto;
+	filter: drop-shadow(0 0 0 #fff);
+	z-index: -5;
+	transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
+  }
+  
+  .star-4 {
+	position: absolute;
+	top: 20%;
+	left: 40%;
+	width: 10px;
+	height: auto;
+	filter: drop-shadow(0 0 0 #fff);
+	z-index: -5;
+	transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+  }
+  
+  .star-5 {
+	position: absolute;
+	top: 25%;
+	left: 45%;
+	width: 15px;
+	height: auto;
+	filter: drop-shadow(0 0 0 #fff);
+	z-index: -5;
+	transition: all 0.6s cubic-bezier(0, 0.4, 0, 1.01);
+  }
+  
+  .star-6 {
+	position: absolute;
+	top: 5%;
+	left: 50%;
+	width: 5px;
+	height: auto;
+	filter: drop-shadow(0 0 0 #fff);
+	z-index: -5;
+	transition: all 0.8s ease;
+  }
+  
+  .button-register:hover {
+	background: transparent;
+	color: #ACAEFE;
+	box-shadow: 0 0 25px #ACAEFE;
+  }
+  
+  .button-register:focus{
+	outline: none;
+  }
+
+  .button-register:hover .star-1 {
+	position: absolute;
+	top: -60%;
+	left: -10%;
+	width: 25px;
+	height: auto;
+	filter: drop-shadow(0 0 10px #fff);
+	z-index: 2;
+  }
+  
+  .button-register:hover .star-2 {
+	position: absolute;
+	top: -25%;
+	left: 10%;
+	width: 15px;
+	height: auto;
+	filter: drop-shadow(0 0 10px #fff);
+	z-index: 2;
+  }
+
+  .button-register:hover .star-3 {
+	position: absolute;
+	top: 55%;
+	left: 25%;
+	width: 5px;
+	height: auto;
+	filter: drop-shadow(0 0 10px #fff);
+	z-index: 2;
+  }
+  
+  .button-register:hover .star-4 {
+	position: absolute;
+	top: 30%;
+	left: 80%;
+	width: 8px;
+	height: auto;
+	filter: drop-shadow(0 0 10px #fff);
+	z-index: 2;
+  }
+  
+  .button-register:hover .star-5 {
+	position: absolute;
+	top: 25%;
+	left: 101%;
+	width: 15px;
+	height: auto;
+	filter: drop-shadow(0 0 10px #fff);
+	z-index: 2;
+  }
+  
+  .button-register:hover .star-6 {
+	position: absolute;
+	top: 5%;
+	left: 60%;
+	width: 5px;
+	height: auto;
+	filter: drop-shadow(0 0 10px #fff);
+	z-index: 2;
+  }
+  
+  .fil0 {
+	fill: white;
+  }
