added: routes on landing page

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -209,9 +209,9 @@
                     </div>
 
                     <div class="nfts">
-                        <div class="trending heading flex flex-sb">
+                        <!-- <div class="trending heading flex flex-sb">
                             <h2>Upcoming Talks</h2>
-                        </div>
+                        </div> -->
 
                         <!-- ======Categories======= -->
 
@@ -243,7 +243,7 @@
                         </div> -->
 
                         <!-- =====Browse NFT===== -->
-                        <div class="browse">
+                        <!-- <div class="browse">
                             <div class="nft">
                                 <div class="dates">
                                     <div class="date">
@@ -262,10 +262,6 @@
                                         </div>
                                         
                                     </div>
-                                    <!-- <div class="session">
-                                        <p style="display: inline;">11th Feb</p>
-                                        <div class="time">🕒 1:00 PM</div>
-                                    </div> -->
                                 </div>
                                 <div class="middle">
                                     <div class="line"></div>
@@ -293,19 +289,8 @@
                                         <br>by Vinit Shahdeo @ Online (Here)
                                     </div>
                                 </div>
-                                <!-- <div class="event1">
-                                    
-                                    <img src="../public/img/location.png" style="height: 25px; width: 25px;"/>
-                                    <p class="title">How to be a pro contributor?</p><br>
-                                    <p style="margin-left: 7.5rem; font-size: 0.8em; font-weight: 400;">🕒 12:00 PM</p>
-                                </div>
-                                <div class="event1">
-                                    
-                                    <img src="../public/img/live.png" style="height: 25px; width: 25px;"/>
-                                    <div class="title" style="margin-left: 0.5rem;">How to be a pro contributor?</div>
-                                </div> -->
 
-                            </div>
+                            </div> -->
 
                             <!-- <div class="nft">
                                 <img src="https://raw.githubusercontent.com/programmercloud/nft-dashboard/main/img/nft-2.jpg"
