--- a/views/project.ejs
+++ b/views/project.ejs
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-
+  <script type="text/javascript" src="https://storage.yandexcloud.net/slaylines/uploads/snowflakes.min.1.0.0.js" defer></script>
   <div id="particles-js"></div>
 
   <!-- navbar -->
@@ -84,10 +84,14 @@
   <div class="projFooter" style="text-align: center; padding: 10px; background: #00ff75;">
     <p class="footText"> Make the contributions rain! 🌧️ </p>
   </div>
+
+  <script src="../public/js/click_snow.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="../public/js/particles-project.js"></script>
   <script src="../public/js/particle-project.js"></script>
   <script src="../public/js/navbar.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="../public/js/snowflakes.js"></script>
   <script>
     AOS.init();
   </script>
