--- a/views/history.ejs
+++ b/views/history.ejs
@@ -33,13 +33,13 @@
                     <p>Leaderboard</p>
                 </div>
 
-                <div class="menu-item flex m0" onclick="window.open('/project','mywindow');">
+                <a class="menu-item flex m0"  href="/projects">
                     <div class="icon">
                         <ion-icon name="magnet-outline"></ion-icon>
                     </div>
 
                     <p>Projects</p>
-                </div>
+                </a>
             </div>
         </div>
         <!-- Dashboard -->
@@ -66,13 +66,13 @@
                             <p>Leaderboard</p>
                         </div>
 
-                        <div class="menu-item flex" onclick="window.open('/project','mywindow');">
+                        <a class="menu-item flex"  href="/projects">
                             <div class="icon">
                                 <ion-icon name="magnet-outline"></ion-icon>
                             </div>
 
                             <p>Projects</p>
-                        </div>
+                        </a>
 
                         <!-- <div class="menu-item flex">
                             <div class="icon">
