--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -33,13 +33,13 @@
                     <p>Leaderboard</p>
                 </div>
 
-                <a class="menu-item flex m0" style="display: inline-block;"  href="/projects">
+                <div class="menu-item flex m0" style="display: inline-block;" onclick="window.open('/project','mywindow');">
                     <div class="icon">
                         <ion-icon name="magnet-outline"></ion-icon>
                     </div>
 
                     <p>Projects</p>
-                </a>
+                </div>
 
             </div>
         </div>
@@ -66,13 +66,13 @@
                         <p>Leaderboard</p>
                     </div>
 
-                    <a class="menu-item flex"  href="/projects">
+                    <div class="menu-item flex" onclick="window.open('/projects','mywindow');">
                         <div class="icon">
                             <ion-icon name="magnet-outline"></ion-icon>
                         </div>
 
                         <p>Projects</p>
-                    </a>
+                    </div>
 
                     <!-- <div class="menu-item flex">
                         <div class="icon">
