--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -33,7 +33,7 @@
                     <p>Leaderboard</p>
                 </div>
 
-                <div class="menu-item flex m0" style="display: inline-block;" onclick="window.open('/project','mywindow');">
+                <div class="menu-item flex m0" style="display: inline-block;" onclick="window.open('/projects','mywindow');">
                     <div class="icon">
                         <ion-icon name="magnet-outline"></ion-icon>
                     </div>
