--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -66,7 +66,7 @@
                             <p>Leaderboard</p>
                         </div>
 
-                        <div class="menu-item flex" onclick="window.open('/project','mywindow');">
+                        <div class="menu-item flex" onclick="window.open('/projects','mywindow');">
                             <div class="icon">
                                 <ion-icon name="magnet-outline"></ion-icon>
                             </div>
